--- a/package.json
+++ b/package.json
@@ -17,15 +17,22 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "json-loader": "^0.5.7",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "@material-ui/core": "^3.3.2",
+    "@material-ui/icons": "^3.0.1",
+    "axios": "^0.18.0",
     "babel-preset-stage-1": "^6.1.18",
+    "bluebird": "^3.5.2",
     "lodash": "^3.10.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
-    "redux": "4.0.0"
+    "redux": "4.0.0",
+    "redux-thunk": "^2.3.0",
+    "sentiment": "^5.0.1"
   }
 }
